# flashback-screenshots

./: .gitignore  CLAUDE.md  README.md  advice.txt  bm25s_example_code.py  config.example.yaml  create_webui_icon.py  example_tesseract_ocr_get_bounding_box.py  flashback-test.sh  plan-draft.txt  problems.txt  pyproject.toml  rank_bm25_example_code.py  related_projects.txt  spacy_tokenizer_example_code.py  todo.txt
android_xml_dumper/: monitor_root.py
examples/linux_xorg_get_window_title/: xlib_example.py
flashback/api/: server.py
flashback/api/routes/: __init__.py  config.py  health.py  screenshots.py  search.py
flashback/cli/: commands.py  config_cmd.py  logs.py  main.py  search.py  serve.py  status.py  stop.py  view.py  webui.py
flashback/core/: config.py  daemon.py  database.py  embedding_client.py  logger.py  logging_config.py
flashback/search/: __init__.py  bm25.py  bm25_manager.py  embedding.py  tokenizer.py
flashback/web/templates/: detail.html  index.html  timeline.html
flashback/workers/: __init__.py  base.py  cleanup.py  embedding.py  ocr.py  screenshot.py  window_title.py
screenshot_worker/: .gitignore  compatibility-advice.txt  compose-metaplan.txt  glibc-compatibility-builds.txt  init_prompt.txt  multi-display-screenshot-pc.txt  plan-advanced-features.md  plan-android-simplified.md  plan-core-detailed.md  plan-core-simplified.md  plan-observability-detailed.md  plan-observability-simplified.md  todo.txt
screenshot_worker/android-bootstrap/: .gitignore  plan-foreground-persistant-service.txt  settings.gradle  todo.txt
screenshot_worker/android-bootstrap/android-go-bootstrap-su/: build.sh  config.toml.example  go.mod  go.sum  grep-network-summary.sh  network-summary.txt  plan-network-detection-fix.txt  plan.txt  prompt.txt  test-network-detection.sh
screenshot_worker/android-bootstrap/android-go-bootstrap-su/cmd/screenshot-worker/: main.go
screenshot_worker/android-bootstrap/android-go-bootstrap-su/internal/briefing/: briefing.go
screenshot_worker/android-bootstrap/android-go-bootstrap-su/internal/buffer/: buffer.go
screenshot_worker/android-bootstrap/android-go-bootstrap-su/internal/config/: config.go
screenshot_worker/android-bootstrap/android-go-bootstrap-su/internal/logging/: logging.go
screenshot_worker/android-bootstrap/android-go-bootstrap-su/internal/netcheck/: netcheck.go
screenshot_worker/android-bootstrap/android-go-bootstrap-su/internal/root/: root.go
screenshot_worker/android-bootstrap/android-go-bootstrap-su/internal/screencap/: screencap.go
screenshot_worker/android-bootstrap/android-go-bootstrap-su/internal/session/: session.go
screenshot_worker/android-bootstrap/android-go-bootstrap-su/internal/transport/: transport.go
screenshot_worker/android-bootstrap/app/: build.gradle
screenshot_worker/android-bootstrap/app/src/androidTest/java/com/openmule/screenshotworker/: ExampleInstrumentedTest.kt
screenshot_worker/android-bootstrap/app/src/main/: AndroidManifest.xml
screenshot_worker/android-bootstrap/app/src/main/java/com/openmule/screenshotworker/: MainActivity.kt  ScreenshotWorkerApp.kt
screenshot_worker/android-bootstrap/app/src/main/java/com/openmule/screenshotworker/service/: BatteryOptimizationHelper.kt  BootReceiver.kt  ScreenStateHelper.kt  ScreenshotService.kt  ServiceKeepAliveHelper.kt
screenshot_worker/android-bootstrap/app/src/main/java/com/openmule/screenshotworker/storage/: DiskBuffer.kt
screenshot_worker/android-bootstrap/app/src/main/java/com/openmule/screenshotworker/transport/: WebSocketTransport.kt
screenshot_worker/android-bootstrap/app/src/main/java/com/openmule/screenshotworker/ui/screens/: DiagnosticScreen.kt  HomeScreen.kt
screenshot_worker/android-bootstrap/app/src/main/java/com/openmule/screenshotworker/ui/theme/: Color.kt  Theme.kt  Type.kt
screenshot_worker/android-bootstrap/app/src/main/java/com/openmule/screenshotworker/ui/viewmodel/: MainViewModel.kt
screenshot_worker/android-bootstrap/app/src/main/res/values/: strings.xml  themes.xml
screenshot_worker/android-bootstrap/app/src/main/res/xml/: network_security_config.xml
screenshot_worker/android-bootstrap/app/src/test/java/com/openmule/screenshotworker/: ExampleUnitTest.kt
screenshot_worker/android-bootstrap/gradle/: libs.versions.toml
screenshot_worker/android-bootstrap/gradle/wrapper/: gradle-wrapper.properties
screenshot_worker/go-bootstrap/: .gitignore  README.md  config.toml.example  e2e-test.sh  go.mod  go.sum  libraries.txt  reference.go  test.sh
screenshot_worker/go-bootstrap/cmd/screenshot-worker/: main.go
screenshot_worker/go-bootstrap/internal/buffer/: buffer.go
screenshot_worker/go-bootstrap/internal/capture/: capture.go
screenshot_worker/go-bootstrap/internal/config/: config.go
screenshot_worker/go-bootstrap/internal/logging/: logging.go
screenshot_worker/go-bootstrap/internal/service/: service.go  service_darwin.go  service_linux.go  service_windows.go
screenshot_worker/go-bootstrap/internal/session/: session.go  session_darwin.go  session_linux.go  session_windows.go
screenshot_worker/go-bootstrap/internal/transport/: transport.go
screenshot_worker/python-ws-server-bootstrap/: .gitignore  plan.txt  requirements.txt  run.sh  server.py
screenshot_worker/rust-bootstrap/: .gitignore  Cargo.toml  README.md
screenshot_worker/rust-bootstrap/universal/: Cargo.toml  README.md
screenshot_worker/rust-bootstrap/x11/: Cargo.toml  README.md
