[workspace]
members = ["x11", "universal"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Screenshot Worker Team"]
license = "MIT"
repository = "https://github.com/example/screenshot-worker"
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1.38", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
thiserror = "1.0"
anyhow = "1.0"
