[package]
name = "screenshot-worker-universal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Screenshot worker — universal build supporting Wayland + X11 on Linux via xdg-desktop-portal and fallback tools."

[[bin]]
name = "screenshot-worker"
path = "src/main.rs"

[dependencies]
# Async runtime & networking
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = "0.3"

# Serialization & config
serde = { workspace = true }
serde_json = "1.0"
toml = { workspace = true }

# CLI
clap = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time & filesystem
chrono = { workspace = true }
directories = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# Cross-platform screen capture (macOS + Windows)
# Pinned to 0.4.x — same reasoning as the x11 crate.
[target.'cfg(not(target_os = "linux"))'.dependencies]
xcap = "=0.4.0"

# Linux: Wayland-native capture via xdg-desktop-portal
[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.8", features = ["tokio"], default-features = false }
zbus = { version = "4", default-features = false, features = ["tokio"] }

# Process / window info
sysinfo = "0.30"

# MessagePack for compact wire format
rmp-serde = "1.3"

# For shell-out fallback (grim / scrot)
tokio-process = "0.2"

[dependencies.uuid]
version = "1.9"
features = ["v4", "serde"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release.build-override]
opt-level = 3
