[package]
name = "screenshot-worker-x11"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Screenshot worker — X11-only Linux build. Lightweight with minimal system dependencies."

[[bin]]
name = "screenshot-worker"
path = "src/main.rs"

[dependencies]
# Async runtime & networking
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = "0.3"

# Serialization & config
serde = { workspace = true }
serde_json = "1.0"
toml = { workspace = true }

# CLI
clap = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time & filesystem
chrono = { workspace = true }
directories = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# Cross-platform screen capture (X11, macOS, Windows)
# Pinned to 0.4.x — pre-PipeWire, pre-zbus, lighter dependency set.
# On Linux this is X11-only. macOS and Windows are fully supported.
xcap = "=0.4.0"

# Process / window info
sysinfo = "0.30"

# MessagePack for compact wire format
rmp-serde = "1.3"

[dependencies.uuid]
version = "1.9"
features = ["v4", "serde"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release.build-override]
opt-level = 3
